# 3dViewer_on_3dCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  View3d.qml  api.cpp  api.h  camerasettingswidget.cpp  camerasettingswidget.h  camerasettingswidget.ui  colorsettingswidget.cpp  colorsettingswidget.h  colorsettingswidget.ui  custom3dwindow.cpp  custom3dwindow.h  customgraphicsview.cpp  customgraphicsview.h  drawing3d.cpp  drawing3d.h  explosioneffect.cpp  explosioneffect.h  fieldsettingswidget.cpp  fieldsettingswidget.h  fieldsettingswidget.ui  lineentity.cpp  lineentity.h  linemousehandler.cpp  linemousehandler.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  res.qrc  view3d.cpp  view3d.h  worker.cpp  worker.h
client/: client.py
res/: drone_1.mtl  drum.mtl
src/: api.cpp  api.h  camerasettingswidget.cpp  camerasettingswidget.h  colorsettingswidget.h  drawing3d.cpp  drawing3d.h  explosioneffect.cpp  fieldsettingswidget.cpp  fieldsettingswidget.ui  main.cpp  mainwindow.cpp  settings.h  view3d.cpp  view3d.h
